// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`toMatchStyledComponentsSnapshot mount 1`] = `
.c1 {
  padding: 4em;
  background: papayawhip;
}

.c0 {
  font-size: 1.5em;
  -webkit-text-align: center;
  text-align: center;
  color: palevioletred;
}

.c0:hover {
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.c0 em {
  color: green;
}

@media (min-width: 600px) {
  .c0 {
    color: blue;
  }
}

<styled.section>
  <section
    className="c1"
  >
    <styled.h1>
      <h1
        className="c0"
      >
        Hello World, this is my first styled component!
      </h1>
    </styled.h1>
  </section>
</styled.section>
`;

exports[`toMatchStyledComponentsSnapshot null 1`] = `null`;

exports[`toMatchStyledComponentsSnapshot shallow 1`] = `
.c0 {
  padding: 4em;
  background: papayawhip;
}

<section
  className="c0"
>
  <styled.h1>
    Hello World, this is my first styled component!
  </styled.h1>
</section>
`;

exports[`toMatchStyledComponentsSnapshot test-renderer 1`] = `
.c1 {
  padding: 4em;
  background: papayawhip;
}

.c0 {
  font-size: 1.5em;
  -webkit-text-align: center;
  text-align: center;
  color: palevioletred;
}

.c0:hover {
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.c0 em {
  color: green;
}

@media (min-width: 600px) {
  .c0 {
    color: blue;
  }
}

<section
  className="c1"
>
  <h1
    className="c0"
  >
    Hello World, this is my first styled component!
  </h1>
</section>
`;
